--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/google.maps": "^3.51.0",
     "axios": "^1.2.0",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.6",
